@@ -1,3 +1,8 @@
+2017-11-04  Dirk Eddelbuettel  <edd@debian.org>
+
+	* tests/simple.R: Condition html rendering test on being on Linux or
+	Windows as CRAN uses some seriously dated pandoc binaries elsewere
+
 2017-11-02  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Release 0.0.4
